rework roles management